manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress
  namespace: argocd # Để cùng namespace với ArgoCD cho tiện quản lý ban đầu
  annotations:
    # GỌI TÊN IP TĨNH TỪ TERRAFORM
    kubernetes.io/ingress.global-static-ip-name: "lab-gke-485602-dev-cluster-global-ip" 
    
    # GỌI CERTIFICATE CHUNG
    networking.gke.io/managed-certificates: "common-managed-cert,frontend-managed-cert"
    
    # SỬ DỤNG GKE INGRESS
    kubernetes.io/ingress.class: "gce"

    # Tùy chọn: Tự động chuyển hướng HTTP sang HTTPS
    kubernetes.io/ingress.allow-http: "true" 
spec:
  ingressClassName: gce
  rules:
    # 1. Cấu hình cho ArgoCD
    - host: argocd-nghieptb-gke-lab.webapp01.hblab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80

    # 2. Cấu hình cho frontend app (nếu bật ingress riêng cho app này)
    - host: frontend-app-nghieptb-gke-lab.webapp01.hblab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab-gke-frontend-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: lab-gke-backend-svc
                port:
                  number: 3000
